Bug 164123 - Changing language on a selection of cells reset the formatting
Summary: Changing language on a selection of cells reset the formatting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.3.2 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:25.8.0 target:25.2.0.3 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Selection
  Show dependency treegraph
 
Reported: 2024-12-02 07:21 UTC by Phil Hyluio
Modified: 2025-02-06 10:04 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Video demonstrating the bug (1.53 MB, video/x-matroska)
2024-12-02 07:21 UTC, Phil Hyluio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Phil Hyluio 2024-12-02 07:21:57 UTC
Created attachment 197894 [details]
Video demonstrating the bug

Changing the language on a selection of cells reset the formatting.

It doesn't if you select a single cell.

See attached video.
Comment 1 m_a_riosv 2024-12-02 12:18:08 UTC
Reproducible
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: afc441e65107ed808c399b65f4737d25541cdf77
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 m_a_riosv 2024-12-02 12:29:51 UTC
Latest version that works on the ones I have installed.
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 3 raal 2024-12-02 15:56:05 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 48118d6a72f484aef2a31be9edda6191847fcb30 is the first bad commit
commit 48118d6a72f484aef2a31be9edda6191847fcb30
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Thu Jan 25 18:11:40 2024 +0100

    source fbbad70b9437aa2e96f004c530f2d552715cf810

161371: tdf#127856: fix cell selection language | https://gerrit.libreoffice.org/c/core/+/161371
Comment 4 Caolán McNamara 2024-12-02 20:09:07 UTC
You generally probably need the "author" rather than the "committer"
Comment 5 Phil Hyluio 2024-12-29 10:13:54 UTC
Any news on this?
Comment 6 Henry Castro 2025-01-09 14:06:11 UTC
Thanks

I will take a look, when I have some time =)
Comment 7 Aron Budea 2025-01-09 14:13:56 UTC
I just submitted a patch for it, actually: https://gerrit.libreoffice.org/c/core/+/180016
Not sure about the whole thing, but it seems to work, a review would be welcome. And I have to add a test as well.
Comment 8 Henry Castro 2025-01-13 11:57:10 UTC
Thanks Aron
Comment 9 Commit Notification 2025-01-13 12:01:38 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/202332062d245fe394f01236cb56e04083e01141

tdf#164123 Changing language on a selection of cells resets formatting

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-01-13 14:23:55 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/0afc406d5f0f9ac7097b3e6a38d4900adfec17c3

tdf#164123 Changing language on a selection of cells resets formatting

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-01-14 12:18:30 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d846849f17cd1f85a51d510dabdfffbb3aeccc64

tdf#164123 Changing language on a selection of cells resets formatting

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-01-22 12:16:05 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-0":

https://git.libreoffice.org/core/commit/d4f34dfe26cafe8516522f7d554f38017f9c25da

tdf#164123 Changing language on a selection of cells resets formatting

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Phil Hyluio 2025-02-06 10:04:13 UTC
It finally works in 25.2

Thanks