tdf#164123 Changing language on a selection of cells resets formatting

Change-Id: I580ef23d19a62e2074e098e84e5b50831a6705cc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180016
Reviewed-by: Henry Castro <hcastro@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 202332062d245fe394f01236cb56e04083e01141)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180176
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>